// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardForm component should renders correctly with address dropdown 1`] = `
<Styled(View)>
  <Styled(View)>
    <CreditCardFields
      addressLabels={Object {}}
      addressList={
        Immutable.List [
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          },
        ]
      }
      cardType=""
      cardTypeImgUrl=""
      className=""
      dispatch={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "meta": Object {
                  "field": "onFileAddressKey",
                  "form": "addEditCreditCard",
                  "persistentSubmitErrors": undefined,
                  "touch": undefined,
                },
                "payload": "12345",
                "type": "@@redux-form/CHANGE",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      dto={Object {}}
      expMonthOptionsMap={
        Array [
          Object {
            "id": "1",
            "label": "01 (Jan.)",
          },
          Object {
            "id": "2",
            "label": "02 (Feb.)",
          },
          Object {
            "id": "3",
            "label": "03 (Mar.)",
          },
          Object {
            "id": "4",
            "label": "04 (Apr.)",
          },
          Object {
            "id": "5",
            "label": "05 (May.)",
          },
          Object {
            "id": "6",
            "label": "06 (Jun.)",
          },
          Object {
            "id": "7",
            "label": "07 (Jul.)",
          },
          Object {
            "id": "8",
            "label": "08 (Aug.)",
          },
          Object {
            "id": "9",
            "label": "09 (Sep.)",
          },
          Object {
            "id": "10",
            "label": "10 (Oct.)",
          },
          Object {
            "id": "11",
            "label": "11 (Nov.)",
          },
          Object {
            "id": "12",
            "label": "12 (Dec.)",
          },
        ]
      }
      expYearOptionsMap={
        Array [
          Object {
            "id": "2019",
            "label": "2019",
          },
          Object {
            "id": "2020",
            "label": "2020",
          },
          Object {
            "id": "2021",
            "label": "2021",
          },
          Object {
            "id": "2022",
            "label": "2022",
          },
          Object {
            "id": "2023",
            "label": "2023",
          },
          Object {
            "id": "2024",
            "label": "2024",
          },
          Object {
            "id": "2025",
            "label": "2025",
          },
          Object {
            "id": "2026",
            "label": "2026",
          },
          Object {
            "id": "2027",
            "label": "2027",
          },
          Object {
            "id": "2028",
            "label": "2028",
          },
          Object {
            "id": "2029",
            "label": "2029",
          },
        ]
      }
      handleSubmit={[MockFunction]}
      initialValues={Object {}}
      isEdit={false}
      isPLCCEnabled={true}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      onFileAddressKey=""
      onFileAddresskey="12345"
      selectedCard={null}
      updateExpiryDate={[Function]}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(Heading)
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="black"
      letterSpacing="ls167"
      locator=""
      text=""
      textAlign="left"
    />
    <Styled(View)>
      <Styled(BodyCopy)
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        marginTop="10"
        textAlign="left"
      />
    </Styled(View)>
    <Field
      addAddress={[Function]}
      component={[Function]}
      data={
        Array [
          Object {
            "content": Object {
              "addressId": "12345",
              "firstName": "test",
              "lastName": "test",
              "primary": "true",
            },
            "id": "12345",
            "label": "test test (Default)",
            "primary": true,
          },
          Object {
            "content": "",
            "id": "",
            "label": undefined,
            "primary": false,
          },
        ]
      }
      dataLocator="payment-billingaddressdd"
      dropDownStyle={
        Object {
          "borderBottomWidth": 1,
          "height": 30,
          "marginTop": 25,
        }
      }
      id="onFileAddressKey"
      itemStyle={
        Object {
          "height": 90,
        }
      }
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      name="onFileAddressKey"
      onValueChange={[Function]}
      selectedValue="12345"
      variation="secondary"
    />
    <Styled(View)>
      <Styled(View) />
      <Address
        address={
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          }
        }
        customStyle={
          Object {
            "fontSize": "fs14",
            "fontWeight": "regular",
          }
        }
        dataLocatorPrefix="address"
        showCountry={false}
        showName={true}
        showPhone={false}
      />
      <Styled(View) />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      locator=""
      onPress={[MockFunction]}
      style={
        Object {
          "color": "white",
          "fontWeight": "normal",
          "marginTop": 48,
          "width": 190,
        }
      }
      text=""
      url=""
    />
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={false}
      fill="WHITE"
      fullWidth=""
      locator=""
      style={
        Object {
          "border": 1,
          "color": "black",
          "fontWeight": "normal",
          "marginTop": 15,
          "opacity": 0.5,
          "width": 190,
        }
      }
      text=""
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`CreditCardForm component should renders correctly with addressForm 1`] = `
<Styled(View)>
  <Styled(View)>
    <CreditCardFields
      addressLabels={Object {}}
      addressList={
        Immutable.List [
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          },
        ]
      }
      cardType=""
      cardTypeImgUrl=""
      className=""
      dispatch={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "meta": Object {
                  "field": "onFileAddressKey",
                  "form": "addEditCreditCard",
                  "persistentSubmitErrors": undefined,
                  "touch": undefined,
                },
                "payload": "12345",
                "type": "@@redux-form/CHANGE",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      dto={Object {}}
      expMonthOptionsMap={
        Array [
          Object {
            "id": "1",
            "label": "01 (Jan.)",
          },
          Object {
            "id": "2",
            "label": "02 (Feb.)",
          },
          Object {
            "id": "3",
            "label": "03 (Mar.)",
          },
          Object {
            "id": "4",
            "label": "04 (Apr.)",
          },
          Object {
            "id": "5",
            "label": "05 (May.)",
          },
          Object {
            "id": "6",
            "label": "06 (Jun.)",
          },
          Object {
            "id": "7",
            "label": "07 (Jul.)",
          },
          Object {
            "id": "8",
            "label": "08 (Aug.)",
          },
          Object {
            "id": "9",
            "label": "09 (Sep.)",
          },
          Object {
            "id": "10",
            "label": "10 (Oct.)",
          },
          Object {
            "id": "11",
            "label": "11 (Nov.)",
          },
          Object {
            "id": "12",
            "label": "12 (Dec.)",
          },
        ]
      }
      expYearOptionsMap={
        Array [
          Object {
            "id": "2019",
            "label": "2019",
          },
          Object {
            "id": "2020",
            "label": "2020",
          },
          Object {
            "id": "2021",
            "label": "2021",
          },
          Object {
            "id": "2022",
            "label": "2022",
          },
          Object {
            "id": "2023",
            "label": "2023",
          },
          Object {
            "id": "2024",
            "label": "2024",
          },
          Object {
            "id": "2025",
            "label": "2025",
          },
          Object {
            "id": "2026",
            "label": "2026",
          },
          Object {
            "id": "2027",
            "label": "2027",
          },
          Object {
            "id": "2028",
            "label": "2028",
          },
          Object {
            "id": "2029",
            "label": "2029",
          },
        ]
      }
      handleSubmit={[MockFunction]}
      initialValues={Object {}}
      isEdit={false}
      isPLCCEnabled={true}
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      onFileAddressKey=""
      pristine={true}
      selectedCard={null}
      updateExpiryDate={[Function]}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(Heading)
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="black"
      letterSpacing="ls167"
      locator=""
      text=""
      textAlign="left"
    />
    <Styled(View)>
      <Styled(BodyCopy)
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        marginTop="10"
        textAlign="left"
      />
    </Styled(View)>
    <Field
      addAddress={[Function]}
      component={[Function]}
      data={
        Array [
          Object {
            "content": Object {
              "addressId": "12345",
              "firstName": "test",
              "lastName": "test",
              "primary": "true",
            },
            "id": "12345",
            "label": "test test (Default)",
            "primary": true,
          },
          Object {
            "content": "",
            "id": "",
            "label": undefined,
            "primary": false,
          },
        ]
      }
      dataLocator="payment-billingaddressdd"
      dropDownStyle={
        Object {
          "borderBottomWidth": 1,
          "height": 30,
          "marginTop": 25,
        }
      }
      id="onFileAddressKey"
      itemStyle={
        Object {
          "height": 90,
        }
      }
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
        }
      }
      name="onFileAddressKey"
      onValueChange={[Function]}
      variation="secondary"
    />
    <Styled(View)>
      <Styled(View) />
      <Address
        address={
          Object {
            "addressId": "12345",
            "firstName": "test",
            "lastName": "test",
            "primary": "true",
          }
        }
        customStyle={
          Object {
            "fontSize": "fs14",
            "fontWeight": "regular",
          }
        }
        dataLocatorPrefix="address"
        showCountry={false}
        showName={true}
        showPhone={false}
      />
      <Styled(View) />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      locator=""
      onPress={[MockFunction]}
      style={
        Object {
          "color": "white",
          "fontWeight": "normal",
          "marginTop": 48,
          "width": 190,
        }
      }
      text=""
      url=""
    />
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle={Object {}}
      disableButton={false}
      fill="WHITE"
      fullWidth=""
      locator=""
      style={
        Object {
          "border": 1,
          "color": "black",
          "fontWeight": "normal",
          "marginTop": 15,
          "opacity": 0.5,
          "width": 190,
        }
      }
      text=""
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;
